# phidata_lightrag

./: .windsurfrules  MyBoun_chat_ovh.py  README.md  pyproject.toml  pyproject_lightrag.toml  requirements.txt
agents/: agent_leader.py  lightrag_query_openai.py  lightrag_reader.py  web.py
lightrag/: __init__.py  base.py  lightrag.py  llm.py  operate.py  prompt.py  storage.py
lightrag/config/: README.md  activity_categories.py
lightrag/kg/: milvus_impl.py  mongo_impl.py  neo4j_impl.py  subgraph.py
scripts/: entrypoint.sh
