[project]
name = "agent-api"
version = "0.1.0"
requires-python = ">=3.9"
readme = "README.md"
authors = [{ name = "Phidata Team", email = "hello@phidata.com" }]

dependencies = [
  "alembic",
  "duckduckgo-search",
  "fastapi[standard]",
  "mypy",
  "nest_asyncio",
  "openai",
  "pgvector",
  "phidata[aws]==2.5.3",
  "psycopg[binary]",
  "pypdf",
  "pytest",
  "python-docx",
  "ruff",
  "sqlalchemy",
  "tiktoken",
  "typer",
  # Nouvelles dépendances de LightRAG
  "aioboto3>=11.3.0",
  "graspologic>=3.3.0",
  "hnswlib>=0.7.0",
  "nano-vectordb>=0.0.4",
  "networkx>=3.2.1",
  "pika>=1.3.2",
  "prefect>=2.14.12",
  "python-dotenv>=1.0.0",
  "tenacity>=8.2.3",
  "xxhash>=3.4.1",
  "pyvis>=0.3.2",
  "neo4j>=5.0.0",
  "ollama",
  "transformers>=4.47.0",
  "torch>=2.5.1",
  "oracledb>=2.5.0",
  "pymilvus>=2.3.4",
  "pymongo>=4.6.1",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]

# Change this value to use a different directory for the phidata workspace.
# [tool.phidata]
# workspace = "workspace"

[tool.ruff]
line-length = 110
exclude = ["aienv*", ".venv*"]
[tool.ruff.lint.per-file-ignores]
# Ignore `F401` (import violations) in all `__init__.py` files
"__init__.py" = ["F401"]

[tool.mypy]
check_untyped_defs = true
no_implicit_optional = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]
exclude = ["aienv*", ".venv*"]

[[tool.mypy.overrides]]
module = ["pgvector.*", "setuptools.*", "nest_asyncio.*"]
ignore_missing_imports = true

[tool.uv.pip]
no-annotate = true

[tool.pytest.ini_options]
log_cli = true
