[project]
name = "agent-api"
version = "0.1.0"
requires-python = ">=3.9"
readme = "README.md"
authors = [{ name = "Phidata Team", email = "hello@phidata.com" }]

dependencies = [
  "alembic",
  "duckduckgo-search",
  "fastapi[standard]",
  "mypy",
  "nest_asyncio",
  "openai",
  "pgvector",
  "phidata[aws]",
  "psycopg[binary]",
  "pypdf",
  "pytest",
  "python-docx",
  "ruff",
  "sqlalchemy",
  "tiktoken",
  "typer",
  # Nouvelles dépendances de LightRAG
  "aioboto3>=11.3.0",
  "graspologic>=3.3.0",
  "hnswlib>=0.7.0",
  "neo4j>=5.0.0",  # Ajout explicite de neo4j
  "pika>=1.3.2",
  "prefect>=2.14.12",
  "python-dotenv>=1.0.0",
  "tenacity>=8.2.3",
  "xxhash>=3.4.1",
  "pyvis>=0.3.2",
  "pymilvus>=2.3.4",
  "pymongo>=4.6.1"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["api"]

[tool.ruff]
line-length = 110
exclude = ["aienv*", ".venv*"]
[tool.ruff.lint.per-file-ignores]
# Ignore `F401` (import violations) in all `__init__.py` files
"__init__.py" = ["F401"]

[tool.mypy]
check_untyped_defs = true
no_implicit_optional = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]
exclude = ["aienv*", ".venv*"]

[[tool.mypy.overrides]]
module = ["pgvector.*", "setuptools.*", "nest_asyncio.*"]
ignore_missing_imports = true

[tool.uv.pip]
no-annotate = true

[tool.pytest.ini_options]
log_cli = true
